# progbase-2

./: README.md
lab1/: data.txt  deque.c  deque.h  list.c  list.h  main.c
lab1/doc/: КП-83_ЛР1_Мортіков_Владислав.docx
lab2/: CMakeLists.txt  csv.c  csv.h  data.csv  list.c  list.h  main.c  o.csv  output.csv
lab2/doc/: КП-83_ЛР2_Мортіков_Владислав.docx
lab3/: bintree.c  bintree.h  data.csv  main.c  strstrmap.c  strstrmap.h  vec.c  vec.h
lab3/doc/: КП-83_ЛР3_Мортіков_Владислав.docx
lab3/libcsvlab/: csv.c  csv.h  list.c  list.h
lab4/: CMakeLists.txt  deque.cpp  deque.hpp  list.cpp  list.hpp  main.cpp
lab4/buil/: CMakeCache.txt  Makefile  a.out  cmake_install.cmake
lab4/doc/: КП-83_ЛР4_Мортіков_Владислав.docx
lab5/: csv.hpp  cui.cpp  cui.hpp  main.cpp  optional.hpp  storage.cpp  storage.hpp  topics.hpp
lab5/data/: lections.csv
lab5/doc/: КП-83_ЛР5_Мортіков_Владислав.docx
lab6/lab6v1/: .gitignore  csv_storage.cpp  csv_storage.hpp  cui.cpp  cui.hpp  lab6v1.pro  lection.hpp  main.cpp  storage.hpp  xml_storage.cpp  xml_storage.hpp
lab7/lab7/: adddialog.cpp  adddialog.h  adddialog.ui  lab7.pro  lection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  storage.h  xml_storage.cpp  xml_storage.h
lab8/lab8/: csv.cpp  csv_storage.cpp  csv_storage.hpp  cui.cpp  lab8.pro  main.cpp  sqlite_storage.cpp  sqlite_storage.hpp  storage.cpp  storage.hpp  xml_storage.cpp  xml_storage.hpp
lab9/lab9/: adddialog.cpp  adddialog.h  adddialog.ui  auth.cpp  auth.h  auth.ui  lab9.pro  lection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sqlite_storage.h  (+4 more)
(+8 files in other folders)
